Adjusted openCV version to work with heroku

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,7 @@ psycopg2-binary
 
 # opencv stuff
 pillow
-opencv-python
-opencv-contrib-python
+opencv-python-headless
 
 # background jobs
 celery[redis]
